--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   <!-- custon CSS -->
   <link rel="stylesheet" href="css/style.css">
   <title>Welcome!</title>
+    <!--jquery-->
+  <script src="js/jquery-3.4.1.min.js"></script>
+       <!--Custom js-->
   <script src="js/logic.js"></script>
 </head>
 
 <body>
 
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->  
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   </main>
